--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "history": "^4.7.2",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^16.7.17",
