--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.1.3",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "lc-form-validation": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
