--- a/package.json
+++ b/package.json
@@ -12,24 +12,30 @@
     "bootstrap": "^4.1.3",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
-    "lc-form-validation": "^2.0.0",
+    "lc-form-validation": "^1.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.11",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/toastr": "^2.1.35",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^3.2.0",
+    "redux-devtools-extension": "^2.13.7",
     "style-loader": "^0.22.1",
     "typescript": "^3.2.2",
     "url-loader": "^1.0.1",
