--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-promise-tracker": "^1.1.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.4.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "toastr": "^2.1.4"
