add members & members reducer test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Sample working with React,TypeScript and Webpack",
   "scripts": {
     "start": "webpack-dev-server --mode development --inline --hot --open",
-    "build": "webpack"
+    "build": "webpack",
+    "build:prod": "rimraf dist && env-cmd .env cross-env NODE_ENV=production webpack -p --config ./config/webpack/app/prod.js",
+    "test": "jest -c ./config/test/jest.json --verbose",
+    "test:watch": "jest -c ./config/test/jest.json --verbose --watchAll -i"
   },
   "author": "samuraikun",
   "license": "MIT",
@@ -25,20 +28,33 @@
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "@types/deep-freeze": "^0.1.1",
+    "@types/enzyme": "^3.1.15",
+    "@types/jest": "^23.3.10",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.11",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-mock-store": "^1.0.0",
     "@types/toastr": "^2.1.35",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
     "css-loader": "^1.0.0",
+    "deep-freeze": "^0.0.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
+    "raf": "^3.4.1",
     "redux-devtools-extension": "^2.13.7",
+    "redux-mock-store": "^1.5.3",
     "style-loader": "^0.22.1",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.2.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.5",
